# panghu022

./: README_GITHUB_V4_蹇呯湅.md  README_鍋囨湰鍦伴厭棣哶蹇呯湅.txt  README_鍐呯疆Node鍋囨湰鍦癡2_蹇呯湅.txt  README_鏋勫缓澶辫触淇璇存槑.txt  settings.gradle.kts  xixi_sync_server_example_express.js  涓€閿瓽itHub缂栬瘧璇存槑.txt
.github/workflows/: build-apk.yml
app/: build.gradle.kts
app/src/androidTest/java/com/xixijiuguan/mysillytavernxixi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: st_novel_reader.html
app/src/main/assets/local_node/: README.txt
app/src/main/assets/nodejs-project/: xixi_bootstrap.js
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/xixijiuguan/mysillytavernxixi/: FloatingService.kt  MainActivity.kt  MyApplication.kt  NodeMobileNative.kt
app/src/main/res/drawable/: bg_float_ball.xml
app/src/main/res/layout/: activity_main.xml  layout_float_ball.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/xixijiuguan/mysillytavernxixi/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: package.json  xixi_api_server.js
